traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Erreur de compilation :
TraversalDiagonal:11: error: Int does not take parameters
    if(y == 0 && y != hauteur())
                             ^